[project]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "ptyhon-package (==0.0.1)"
]

[[tool.poetry.source]] 
name = "cloudsmith" 
url = "https://dl.cloudsmith.io/basic/testcheck/packageformats/python/simple/"

[tool.poetry.dependencies]
ptyhon-package = {source = "cloudsmith"}
[tool.poetry]
packages = [{include = "poetry_demo", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
